--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,5 +1,3 @@
-
-
 #menu {
     background-color: var(--bgColorThree);
     color: var(--fontColorLight);
@@ -7,10 +5,10 @@
     grid-template-rows: repeat(auto-fill, minmax(400px, 1fr));
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: var(--paddingEx);
-    width: 100%;
+    width: 65%;
     height: 100%;
     margin: 0 var(--paddingEx);
-    padding: var(--paddingLg);
+    padding: var(--paddingEx);
     box-shadow: var(--shadowCurveEx);
     border: var(--borderSm) solid var(--bgColorAccent);
 }
@@ -22,18 +20,19 @@
     max-height: min-content;
 }
 
-.foodCategory > h1 {
+.foodCategory>h1 {
     text-align: center;
     border-bottom: var(--borderSm) solid var(--bgColorAccent);
     margin-bottom: var(--paddingLg);
 }
 
-.foodCategory > div {
+.foodCategory>div {
     margin-bottom: var(--paddingLg);
     width: 100%;
 }
 
-.foodNamePrice > .foodName, .foodNamePrice > .foodPrice {
+.foodNamePrice>.foodName,
+.foodNamePrice>.foodPrice {
     margin-right: var(--paddingMed);
     display: inline-flex;
 }
@@ -52,6 +51,6 @@ details {
     cursor: pointer;
 }
 
-details > img {
+details>img {
     margin: var(--paddingMed) 0px;
 }
